# raman-batch-effects-yeast

./: .gitignore  .markdown-link-check.json  .markdownlint-cli2.yaml  .vale.ini  CITATION.cff  LICENSE  Makefile  README.md  copy_figures.py  cspell.json  package-lock.json  package.json  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: adversarial-reviewer.md
.github/workflows/: markdown-ci.yml
.vale/styles/Vocab/Raman/: accept.txt
artifacts/: 2026-01-11-draft-from-talk.md  pub-template.md
pub/: .markdownlint-cli2.yaml  README.md  cspell.json  main-text.md  package-lock.json  package.json
src/: main-text.md
src/raman_batch_effects/: analysis_utils.py  batch_correction.py  cache.py  cross_validation.py  datasets.py  loaders.py  plotting.py  spectrum_utils.py  utils.py
src/raman_batch_effects/scripts/: aggregate_cv_metrics.py  config.py  plot_cross_validation.py  plot_embeddings.py  plot_spectra.py  print_sample_sizes.py
