[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "raman_batch_effects"
version = "0.1.0"
description = "Batch effects in Raman spectroscopy of yeast cultures"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "==3.12.*"
dependencies = [
    "arcadia-pycolor==0.6.4",
    "biopython==1.85",
    "click==8.2.1",
    "cvxopt==1.3.2", # pin to avoid a build error in 1.3.3.
    "harmonypy==0.0.10",
    "inmoose==0.8.1",
    "ipykernel==6.30.1",
    "matplotlib==3.10.6",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "numpy==2.3.5", # pin to avoid a conflict between numpy 2.4 and ramanspy.
    "pandas==2.3.2",
    "plotly==6.3.0",
    "pytest==8.4.2",
    "python-dotenv==1.0.0",
    "ramanspy==0.2.10",
    "requests==2.32.5",
    "ruff==0.13.2",
    "scikit-learn==1.7.1",
    "seaborn==0.13.2",
    "statsmodels==0.14.5",
    "tqdm==4.67.1",
    "umap-learn==0.5.9.post2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
known-first-party = ["raman_batch_effects"]

[tool.hatchling.build.targets.wheel]
packages = ["src/raman_batch_effects"]
